--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="Basic"/>
 	<classpathentry kind="src" path="Composition1"/>
+	<classpathentry kind="src" path="Composition2"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
